src: fix layout bug on home and rename suggestions page url

--- a/src/ui/assets/styles/common/_global.scss
+++ b/src/ui/assets/styles/common/_global.scss
@@ -1,3 +1,10 @@
+hr.clear {
+	clear: both;
+	display: block;
+	height: 0;
+	visibility: hidden;
+}
+
 .column-one-sixth {
 	@include grid-column( 1/6 );
 }
